# bw_extract

./: Cargo.toml
src/: cli.yaml  main.rs
test/: test_bedgraph.bedgraph  test_bigwig.bigWig  test_regions.bed
