[package]
name = "bw_extract"
version = "0.1.0"
authors = ["asmith <asmith151@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
bio = "0.33.0"
bigtools = "0.1.4"
rayon = "1.5.0"
polars = "0.12.1"
indicatif = {version = "*", features = ["rayon"]}
